crates/fig-parser/tests/snapshots/integration_tests__integration__math_vector.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Vec2
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
          visibility: Default
          annotations: []
        - name: y
          ty: F64
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Vec3
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
          visibility: Default
          annotations: []
        - name: y
          ty: F64
          visibility: Default
          annotations: []
        - name: z
          ty: F64
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: new
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: F64
          - name: y
            ty: F64
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: zero
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: add
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec2
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: sub
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec2
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: scale
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: s
            ty: F64
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: dot
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec2
                    generic_args: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: len
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec2
            generic_args: []
        name: normalize
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - Vec2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec3
            generic_args: []
        name: cross
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec3
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Vec3
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vec3
            generic_args: []
        name: dot
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec3
                    generic_args: []
        return_types:
          - F64
      body:
        statements:
          - Pass
